--- a/index.html
+++ b/index.html
@@ -60,5 +60,15 @@
             </div>
         </div>
     </section>
+    <!--Sobre Tech Pro-->
+    <section class="sobre-tech-pro ">
+        <div class="contenedor sobre-tech-grid ">
+            <div class="texto-sobre-tech-pro">
+                <h2>Sobre los TechPRO</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, saepe? Commodi fugit cupiditate soluta corrupti incidunt reiciendis veritatis inventore quia alias consectetur fugiat sint deleniti, nulla officia assumenda aut quas.</p>
+            </div>
+        </div>
+       
+    </section>
 </body>
 </html>
